# napari-points-io

./: .gitignore  LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
napari_points_io/: __init__.py  _reader.py  _writer.py  _writer.py.old
napari_points_io.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari_points_io/_tests/: test_reader.py  test_writer.py
tests/: input.rrr  output.rrr  test_io.py
