[metadata]
name = napari-points-io
version = 0.0.1
author = Martin Weigert
author_email = marweigert@gmail.com
url = https://github.com/maweigert/napari-points-io
license = BSD-3-Clause
description = Simple io for points layers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/maweigert/napari-points-io/issues
    Documentation = https://github.com/maweigert/napari-points-io#README.md
    Source Code = https://github.com/maweigert/napari-points-io
    User Support = https://github.com/maweigert/napari-points-io/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-points-io = napari_points_io
